--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "main": "expo-router/entry",
   "version": "1.0.0",
   "scripts": {
-    "start": "expo start",
+    "start": "expo start --port 8082",
     "reset-project": "node ./scripts/reset-project.js",
     "android": "expo start --android",
     "ios": "expo start --ios",
@@ -23,7 +23,7 @@
     "@react-navigation/native": "^7.0.14",
     "axios": "^1.8.2",
     "cloudinary-react-native": "^1.0.1",
-    "expo": "52.0.38",
+    "expo": "^52.0.42",
     "expo-blur": "~14.0.3",
     "expo-constants": "17.0.8",
     "expo-file-system": "~18.0.11",
@@ -57,7 +57,9 @@
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
+    "@react-native-community/cli": "^18.0.0",
     "@types/jest": "^29.5.12",
+    "@types/pg": "^8.11.11",
     "@types/react": "~18.3.12",
     "@types/react-test-renderer": "^18.3.0",
     "jest": "^29.2.1",
